# libraryMNG

./: CMakeLists.txt  Library_Management.docx  Library_Management.txt  README.md
include/: books.h  openFile.h
src/: .books.cpp.swp  books.cpp  main.cpp  openFile.cpp
